# cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
docs/: attention.md  introduction.md  tips.md
include/ta-lib/: ta_abstract.h  ta_common.h  ta_defs.h  ta_func.h  ta_libc.h
lib/: add.cp311-win_amd64.pyd  example.cp311-win_amd64.pyd
src/: add.cpp  alice.json  example.cpp  main.cpp  version.h
src/option/: CMakeLists.txt  option.cpp  option.h  py_option.cpp
tests/: py_talib.py  test.py
